--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Memorizey</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Memorizey</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <!--<string name="nextButton">Next</string>-->
