ファイル選択ダイアログを追加

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="action_settings">Settings</string>
     <!--<string name="nextButton">Next</string>-->
     <string name="Next">Next</string>
+    <string name="action_file">File</string>
 
 </resources>
